# modular-v

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  package.xml
config/: navigation_params.yaml  system_config.yaml
core/: CLAUDE.md  CMakeLists.txt  package.xml
core/include/core/: base_module.hpp  module_interface.hpp  module_manager.hpp  utils.hpp
core/src/: base_module.cpp  module_manager.cpp
core/test/: test_module_manager.cpp
docs/: FRAMEWORK_GUIDE.md  MODULE_IMPLEMENTATION.md  SYSTEM_ARCHITECTURE.md
interfaces/: CMakeLists.txt  package.xml
interfaces/action/: NavigateToGoal.action
interfaces/msg/: HapticFeedback.msg  ModuleStatus.msg  NavigationCommand.msg  ObstacleInfo.msg
interfaces/srv/: EmergencyStop.srv  SaveMap.srv  SetDestination.srv
launch/: system_bringup.launch.py
modules/interaction/audio_interface/include/audio_interface/: voice_interface.hpp
modules/mobility/base_controller/include/base_controller/: motor_controller.hpp
modules/navigation/nav2_module/: CMakeLists.txt  package.xml
modules/navigation/nav2_module/config/: nav2_config.yaml
modules/navigation/nav2_module/include/nav2_module/: nav2_wrapper.hpp
modules/navigation/nav2_module/src/: nav2_wrapper.cpp
modules/navigation/path_planner/include/path_planner/: navigation_wrapper.hpp
modules/perception/camera_module/: CMakeLists.txt  package.xml
modules/perception/camera_module/config/: zed2i_config.yaml
modules/perception/camera_module/include/camera_module/: zed_camera_wrapper.hpp
modules/perception/camera_module/src/: zed_camera_wrapper.cpp
modules/perception/rtabmap_module/: CMakeLists.txt  package.xml
modules/perception/rtabmap_module/config/: rtabmap_config.yaml
modules/perception/rtabmap_module/include/rtabmap_module/: rtabmap_wrapper.hpp
modules/perception/rtabmap_module/src/: rtabmap_wrapper.cpp
src/: main.cpp
turtlebot3_zed_nav/: package.xml  setup.cfg  setup.py
turtlebot3_zed_nav/launch/: turtlebot3_zed_mapping.launch.py  turtlebot3_zed_navigation.launch.py
turtlebot3_zed_nav/turtlebot3_zed_nav/: send_goal.py
