<?xml version="1.0"?>
<package format="3">
  <name>modular_v</name>
  <version>1.0.0</version>
  <description>Visual Impairment Assistant Robot Framework</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Core Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>yaml-cpp</depend>

  <!-- Navigation Stack -->
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_costmap_2d</depend>

  <!-- SLAM -->
  <depend>rtabmap_ros</depend>
  <depend>rtabmap_msgs</depend>

  <!-- Hardware Drivers -->
  <depend>zed_ros2</depend>
  <depend>zed_wrapper</depend>
  <depend>zed_msgs</depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>