<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_module</name>
  <version>1.0.0</version>
  <description>Navigation2 wrapper module for Modular-V framework</description>

  <maintainer email="dev@modular-v.com">Modular-V Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <!-- Message dependencies -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>

  <!-- Nav2 dependencies -->
  <depend>nav2_util</depend>
  <depend>nav2_core</depend>

  <!-- Framework dependencies -->
  <depend>core</depend>

  <!-- External dependencies -->
  <depend>yaml-cpp</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
