<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_module</name>
  <version>1.0.0</version>
  <description>ZED 2i camera wrapper module for Modular-V framework</description>
  <maintainer email="user@example.com">Modular-V Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>core</depend>

  <!-- ROS2 message dependencies -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- ZED dependencies -->
  <depend>zed_wrapper</depend>
  <depend>zed_components</depend>

  <!-- Utility dependencies -->
  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
