<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtabmap_module</name>
  <version>1.0.0</version>
  <description>RTAB-Map SLAM wrapper module for Modular-V framework</description>
  <maintainer email="turtle@example.com">Modular-V Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- RTAB-Map dependencies -->
  <depend>rtabmap_msgs</depend>
  <depend>rtabmap_slam</depend>
  <depend>rtabmap_sync</depend>
  <depend>rtabmap_util</depend>

  <!-- Utility dependencies -->
  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>

  <!-- Custom framework dependencies -->
  <depend>core</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
